--- a/src/sockets.css
+++ b/src/sockets.css
@@ -7,53 +7,55 @@
     stroke: lightgrey !important;
 }
 
-
-.editor {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    height: 100vh;
+#info {
+    background: #8b9fff;
+    border: 4px solid #4e58bf;
+    font-family: sans-serif;
+    resize: vertical;
+    overflow: auto;
 }
 
-.dock {
-    height: 100px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    white-space: nowrap;
+.info_col {
+    height: 100%;
 }
 
-.dock-item {
-    display: inline-block;
-    vertical-align: top;
-    transform: scale(0.8);
-    transform-origin: 50% 0;
-}
-
-.simulation {
-    position: absolute;
-    top: 105px;
-}
-
-.simulation_result {
-    width: 400px;
-    height: 150px;
-    overflow-x: auto;
-    overflow-y: auto;
-    font-size: 18px;
-    font-family: arial;
-    white-space: pre-wrap;
+.info_item {
+    height: 100%;
+    min-height: 76px;
     border: 2px solid #4e58bf;
     border-radius: 10px;
+    padding: 10px;
+    background: white;
+}
+
+.info_label {
+    height: 52px;
+    border: 2px solid #4e58bf;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    background: #4e58bf;
+}
+
+.info_text {
+    height: 75%;
+    min-height: 100px;
+    font-size: 18px;
+    white-space: pre-wrap;
     padding: 6px;
 }
 
-.simulation_result:empty:not(:focus):before {
-    content: attr(data-placeholder);
-    color: rgba(150, 169, 255, 0.8);
-  }
+#code_id {
+    counter-reset: line;
+}
 
-.container {
-    position: absolute;
-    flex: 1;
-    overflow: hidden;
+#code_id code {
+    counter-increment: line;
+}
+
+#code_id code:before {
+    content: counter(line);
+    user-select: none;
+    color: gray;
 }
